--- a/local_planner/cfg/vehicle.yaml
+++ b/local_planner/cfg/vehicle.yaml
@@ -5,7 +5,7 @@ dictitems:
   box_radius_: 12.0
   children_per_node_: 50
   goal_cost_param_: 10.0
-  goal_z_param: 3.0
+  goal_z_param: 2.0
   groups: !!python/object/new:dynamic_reconfigure.encoding.Config
     dictitems:
       adapt_cost_params_: true
@@ -27,7 +27,7 @@ dictitems:
         state: []
       parent: 0
       smooth_cost_param_: 1.5
-      smoothing_margin_degrees_: 5.0
+      smoothing_margin_degrees_: 40.0
       smoothing_speed_xy_: 10.0
       smoothing_speed_z_: 3.0
       state: true
@@ -40,11 +40,12 @@ dictitems:
   heading_cost_param_: 0.5
   max_point_age_s_: 20.0
   min_num_points_per_cell_: 25 # Tune to your sensor requirements!
+  max_sensor_range_: 7.0
   min_sensor_range_: 0.2
   n_expanded_nodes_: 10
   no_progress_slope_: -0.0007
   smooth_cost_param_: 1.5
-  smoothing_margin_degrees_: 5.0
+  smoothing_margin_degrees_: 40.0
   smoothing_speed_xy_: 10.0
   smoothing_speed_z_: 3.0
   timeout_critical_: 0.5
